--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
                 <form action="/deleteTodo/<%= element._id %>" method="post">
                   <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
-                <form action="/editTodo/<%= index %>" method="post">
+                <form action="/editTodo/<%= element._id %>" method="post">
                   <button type="submit" class="btn btn-warning">Update</button>
                 </form>
               </td>
